k8s/serving.yaml
apiVersion: v1
kind: Service
metadata:
  name: tf-serving
  labels:
    name: tf-serving
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8500
    targetPort: 8500
  selector:
    app: tf-serving
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tf-serving
  name: tf-serving
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tf-serving
  template:
    metadata:
      labels:
        app: tf-serving
    spec:
      volumes:
        - name: azure-files
          azureFile:
            secretName: azure-file-secret
            shareName: aksshare
            readOnly: false 
      containers:
      - name: tf-serving
        image: tensorflow/serving:1.13.0
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /models/inception
            subPath: latest_model/exported_model
            name: azure-files
        ports:
        - containerPort: 8500
          protocol: TCP
      restartPolicy: Always
