k8s/tensorboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: tensorboard
  labels:
    name: tensorboard
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 6006
  selector:
    app: tensorboard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tensorboard
  name: tensorboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tensorboard
  template:
    metadata:
      labels:
        app: tensorboard
    spec:
      volumes:
        - name: azure-files
          azureFile:
            secretName: azure-file-secret
            shareName: aksshare
            readOnly: false 
      containers:
      - name: tensorboard
        image: briaracr.azurecr.io/chzbrgr71/tensorboard:1.5
        imagePullPolicy: Always
        command:
         - /usr/local/bin/tensorboard
        args:
        - --logdir
        - /tf-output
        volumeMounts:
          - mountPath: /tf-output
            name: azure-files
        ports:
        - containerPort: 6006
          protocol: TCP
      restartPolicy: Always
