k8s/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: got-web-app
  labels:
    name: got-web-app
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: got-web-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: got-web-app
  name: got-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: got-web-app
  template:
    metadata:
      labels:
        app: got-web-app
    spec:
      containers:
      - name: got-web-app
        image: gotcr.azurecr.io/chzbrgr71/got-web-app:2.00
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
      restartPolicy: Always
